--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,19 @@
-{
-  "language": "node_js",
-  "group": "stable",
-  "dist": "trusty",
-  "os": "linux",
-  "before_install": "npm install -g @angular/cli"
-  "install": "npm install"
-  "test": "ng build"
-}
+#.travis.yml
+
+language: node_js
+node_js:
+  - "8.6.0"
+group: "stable"
+dist: "trusty"
+os: "linux"
+branches:
+  only:
+    - master
+    - Development
+    - Release/1.0
+    
+before_script:
+  - npm install -g @angular/cli
+script:
+  - ng build --prod
 
