--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stats-view",
-  "version": "1.0.3",
+  "version": "1.0.4-SNAPSHOT",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
