--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stats-view",
-  "version": "1.0.3",
+  "version": "1.0.4-SNAPSHOT",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-mdl/core": "^4.0.8",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
@@ -20,7 +21,7 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
-	  "ag-grid": "^15.0.0",
+    "ag-grid": "^15.0.0",
     "ag-grid-angular": "^15.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
@@ -29,7 +30,7 @@
   "devDependencies": {
     "@angular/cli": "1.4.2",
     "@angular/compiler-cli": "^4.2.4",
-	"@angular/language-service": "^4.2.4",
+    "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
